style.css
body{
    width:100%;
    height:100vh;
    margin: 0;
    padding: 0;

}
.aboutPage{
    position:absolute;
    width:90%;
    height:90%;
    background: rgba(0, 0, 0, 0.5);
    z-index:101;
    left: 50%;
    top:5%;
    -webkit-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    display:flex;
    display: -webkit-flex;
    -webkit-justify-content:center;
    justify-content:center;
    align-items:center;
    flex-wrap:wrap;
}
.restartGame{
    position:absolute;
    width:50%;
    height:50%;
    background: rgba(0, 0, 0, 0.5);
    z-index:3000;
    left: 50%;
    top:5%;
    color:white;
    font-size:3em;
    -webkit-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    display:flex;
    justify-content:center;
    align-items:center;
    flex-direction:column;
    border:5px double white;

}
.playAgainButton{
    width:25%;
    height:25%;
    border:2px double white;
    color:white;
    font-size:1em;
    display:flex;
    justify-content:center;
    align-items:center;
    z-index:5000;

}
.gameDesc{
    width: 40%;
    height: 25%;
    border:1px solid black;
    color:white;
    display:flex;
    justify-content:center;
    align-items:center;
    font-size:25px;
}
.lotrDesc {
    width: 50%;
    height: 80%;
    border: 1px solid black;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size:2em;
}
.howToPlay{
    position:absolute;
    width:90%;
    height:90%;
    background: rgba(0, 0, 0, 0.5);
    z-index:101;
    left: 50%;
    top:5%;
    -webkit-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    display:flex;
    justify-content:center;
    align-items:center;
    flex-wrap:wrap;
}
.hpPic{
    border:1px solid lightgrey;
    width: 40%;
    height: 50%;
    background-image:url(images/hp.png);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.armorPic{
    border:1px solid lightgrey;
    width: 40%;
    height: 100%;
    background-image:url(images/armor.png);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.hornPic{
    border:1px solid lightgrey;
    width:100%;
    height:100%;
    background-image:url(images/horn.png);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.healerPic{
    border:1px solid lightgrey;
    width: 30%;
    height: 100%;
    background-image:url(images/1.png);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.nazgulPic{
    border:1px solid lightgrey;
    width: 50%;
    height: 100%;;
    background-image:url(images/3.png);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.enemiesPic{
    border:1px solid lightgrey;
    width: 50%;
    height: 100%;
    background-image:url(images/hill-troll.png);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.exitAbout{
    display:flex;
    justify-content:center;
    align-items:center;
    position:fixed;
    width:5%;
    height:5%;
    top:0;
    right:0;
    background-color:white;
    color:black;
    font-size:40px;
}
.container{
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    width: 100%;
    height: 100vh;
    -webkit-flex-direction:row;
    -webkit-flex-wrap:wrap;
    flex-wrap:wrap;
    flex-direction:row;
    background-image:url(images/background.jpg);
    background-repeat:no-repeat;
    background-size:100% 100%;
}
.rohan{
    position:fixed;
    width:30%;
    height:40%;
    left:-100px;
    overflow:hidden;
    z-index:2000;
}
.chargeForward{
    -webkit-animation-name: rohanChargeForward  ; /* Chrome, Safari, Opera */
    -webkit-animation-duration:6s; /* Chrome, Safari, Opera */
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: 1;
    animation-name: rohanChargeForward ;
    animation-duration: 6s;
    animation-timing-function: linear;
    animation-iteration-count: 1;
}
.chargeOne{
    top:2%;
    left:-800px;
}
.chargeTwo{
    top:14%;
    left:-700px;
}
.chargeThree{
    top:28%;
    left:-800px;
}
.chargeFour{
    top:35%;
    left:-700px;
}
.chargeFive{
    top:50%;
    left:-800px;
}
.chargeSix{
    top:60%;
    left:-700px;
}
.battleground {
    display:flex;
    flex-direction:column;
    width: 50%;
    height: 82%;
    flex-wrap:wrap;

}
/* LEFT SIDE START */
.game-area.left_side{
    display:flex;
    display:-webkit-flex;
    display:-webkit-box;
    width:25%;
    height:82%;
    margin:0;
    padding:0;
    display:inline-flex;
    align-content: space-between;
    flex-wrap: wrap;
    justify-content: center;
    /*background-image: url(./images/finalsides.png);*/
    /*background-repeat:no-repeat;*/
    /*background-size:100% 100%;*/
}
/* LEFT SIDE START */
.game-area.right_side{
    display:flex;
    display:-webkit-flex;
    display:-webkit-box;
    width:25%;
    height:82%;
    margin:0;
    padding:0;
    display:inline-flex;
    align-content: space-between;
    flex-wrap: wrap;
    justify-content: center;
    /*background-image: url(./images/finalsides.png);*/
    /*background-repeat:no-repeat;*/
    /*background-size:100% 100%;*/
}
.game-info{
    display:flex;
    height:18%;
    width:100%;
    flex-direction:row;
    justify-content: space-between;
    align-content:flex-end;
    align-items:center;
    background: rgba(0, 0, 0, 0.8);
}
.info{
    display:flex;
    height: 90%;
    width: 10%;
    color: white;
    margin: 0 1% 0 1%;
    font-weight:bold;
    background-image: url("./images/dwarfBorder.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    align-items:center;
    justify-content:center;
    font-size:1em;
}
.horn{
    background-image:url(images/horn.png );
    background-repeat:no-repeat;
    background-size:95% 95%;
    background-position:center;
    font-size:1.4em;
}
/* ... */

